responsive design added && overflow issue solved

--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   box-shadow: 2px 3px 3px 3px gainsboro;
   padding: 10px;
 }
