--- a/src/Component/User/User.css
+++ b/src/Component/User/User.css
@@ -4,7 +4,23 @@
   box-shadow: 1px 2px 2px 2px gainsboro;
   border-radius: 10px;
   display: flex;
+  width: 95%;
+  align-items: center;
+  overflow: hidden;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 .image {
-  border-radius: 40px;
+  border-radius: 50px;
+  height: 100px;
+  margin-right: 10px;
+}
+@media only screen and (max-width: 600px) {
+  .user {
+    margin: 0;
+  }
+  .image {
+    border-radius: 50px;
+  }
 }
