--- a/src/Component/Users/Users.css
+++ b/src/Component/Users/Users.css
@@ -1,4 +1,24 @@
 .users {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 350px);
+  gap: 20px;
+  margin-top: 20px;
+  justify-content: center;
+}
+@media only screen and (max-width: 1085px) {
+  .users {
+    display: grid;
+    grid-template-columns: repeat(2, 350px);
+    gap: 20px;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .users {
+    grid: none;
+    margin-left: -0.5px;
+  }
 }
